--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@ Thumbs.db
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+.git
+.gitignore
+.dockerignore
+Dockerfile
+node_modules
